第一次提交

--- a/laiqu/src/main/AndroidManifest.xml
+++ b/laiqu/src/main/AndroidManifest.xml
@@ -125,18 +125,22 @@
             android:label="待支付饭局"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".personcentre.activities.CancelledDinnerPartyActivity"
             android:label="已经取消饭局"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan">
-
-        </activity>
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".personcentre.activities.WaitOpenSeatsActivity"
             android:label="待开席饭局"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity
+            android:name=".personcentre.activities.CompletedDInnerPartyActivity"
+            android:label="已经完成饭局"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustPan">
