--- a/qbgg_fanqu_html/build.gradle
+++ b/qbgg_fanqu_html/build.gradle
@@ -14,10 +14,13 @@ android {
             storePassword '999999'
         }
     }
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
+        ndk {
+            abiFilters 'armeabi'
+        }
         applicationId "com.fanqu"
         minSdkVersion 15
         targetSdkVersion 19
@@ -43,6 +46,7 @@ android {
         }
     }
 
+    sourceSets.main.jniLibs.srcDirs = ['libs']
 
 
 
@@ -52,12 +56,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'cn.hugeterry.updatefun:updatefun:1.8.6'
     testCompile 'junit:junit:4.12'
     compile project(':kJPush')
     compile files('libs/libammsdk.jar')
     compile 'com.google.code.gson:gson:2.7'
-
+    //使用版本号占位符,推荐
+    compile 'com.amap.api:navi:latest.integration'
+    compile 'com.amap.api:navi-native:latest.integration'
 }
