--- a/qbgg_fanqu_html/src/main/AndroidManifest.xml
+++ b/qbgg_fanqu_html/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fanqu"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
+
+    <uses-sdk android:minSdkVersion="8" />
 
     <supports-screens
         android:anyDensity="true"
@@ -11,8 +13,7 @@
         android:resizeable="true"
         android:smallScreens="true" />
 
-    <uses-sdk android:minSdkVersion="8" />
-
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -28,33 +29,41 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="Android.permission.SET_ACTIVITY_WATCHER" >
-    </uses-permission>
+    <uses-permission android:name="Android.permission.SET_ACTIVITY_WATCHER"></uses-permission>
+
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:icon="@drawable/ic_fanqu"
-        android:label="@string/app_name" >
+        android:label="@string/app_name">
         <activity
             android:name=".SplashActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar" >
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name="com.amap.api.location.APSService" />
+
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="f5bf910cb1934d7b6e93bc252952b63c" />
+
         <activity
             android:name=".PhoneGap2Activity"
             android:configChanges="orientation|keyboardHidden"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar" >
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -71,21 +80,13 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:windowSoftInputMode="stateHidden|adjustResize" >
+            android:windowSoftInputMode="stateHidden|adjustResize">
 
             <!--
             AuthorizeAdapter表示一个继承自cn.sharesdk.framework.authorize.AuthorizeAdapter
             	 的类，这个类可以监听到页面的生命周期，也可以获取授权页面的各种UI控件。 
             	 开发者可以通过继承AuthorizeAdapter，重写其方法，并获取各种UI来自定义这个页面的行为。     
             <meta-data android:name="AuthorizeAdapter" android:value="cn.sharesdk.demo.MyAdapter" />
-
-
-
-
-
-
-
-
             -->
             <!--
             	QZoneWebShareAdapter表示一个继承自cn.sharesdk.tencent.qzone.QZoneWebShareAdapter
@@ -93,14 +94,6 @@
             	开发者可以通过继承QZoneWebShareAdapter，重写其方法，并获取各种UI来自定义这个页面的行为。
             <meta-data android:name="QZoneWebShareAdapter" android:value="cn.sharesdk.demo.MyQZoneWebShareAdapter" />
             <meta-data android:name="QQWebShareAdapter" android:value="cn.sharesdk.demo.MyQQWebShareAdapter" />
-
-
-
-
-
-
-
-
             -->
 
 
@@ -108,13 +101,6 @@
             	Dropbox的SSO功能需要在此处添加一个对ACTION_VIEW事件的过滤器，其中的scheme是
             	“db-”前缀再开发者应用的加上appKey。如果此过滤器不设置，则不能完成SSO功能授权
               VcELwEsCHZTDBfpS
-
-
-
-
-
-
-
             -->
             <intent-filter>
                 <data android:scheme="db-VcELwEsCHZTDBfpS" />
@@ -128,14 +114,6 @@
                   如果集成QQ分享，或者使用QQ客户端来进行QQ空间的分享，须要在此处添加一个对ACTION_VIEW事件的过滤器，其中的scheme是“tencent”前缀再开发者应用的加上appId。
                如果此过滤器不设置，则分享结束以后不能得到正确的回调
            APP ID:1105570013
-
-
-
-
-
-
-
-
             -->
             <intent-filter>
                 <data android:scheme="tencent1105570013" />
@@ -156,7 +134,7 @@
 
         <!-- 微信分享回调 -->
         <activity
-            android:name="com.fanqu.wxapi.WXEntryActivity"
+            android:name=".wxapi.WXEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:screenOrientation="portrait"
@@ -164,7 +142,7 @@
 
         <!-- 微信支付成功后回调 -->
         <activity
-            android:name="com.fanqu.wxapi.WXPayEntryActivity"
+            android:name=".wxapi.WXPayEntryActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
@@ -179,20 +157,18 @@
             android:name="com.alipay.sdk.app.H5PayActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
+            android:screenOrientation="behind"></activity>
         <activity
             android:name="com.alipay.sdk.auth.AuthActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
+            android:screenOrientation="behind"></activity>
 
         <service
             android:name="org.kymjs.push.core.PullService"
             android:persistent="true"
-            android:process=":kymjs_pullservice" >
-            <intent-filter android:priority="1000" >
+            android:process=":kymjs_pullservice">
+            <intent-filter android:priority="1000">
                 <action android:name="org.kymjs.push.service.pull_service" />
             </intent-filter>
         </service>
@@ -208,9 +184,15 @@
         -->
 
         <receiver
-            android:name="com.fanqu.MyReceiver"
-            android:process=":kymjs_pullservice" >
-        </receiver>
+            android:name=".MyReceiver"
+            android:process=":kymjs_pullservice"></receiver>
+
+        <activity
+            android:name=".NavigationActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" />
     </application>
 
 </manifest>
