--- a/laiqu/build.gradle
+++ b/laiqu/build.gradle
@@ -12,6 +12,8 @@ android {
     }
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
+    aaptOptions.cruncherEnabled = false
+    aaptOptions.useNewCruncher = false
     //关闭cruncher检查(禁止png图片格式验证)
     aaptOptions.cruncherEnabled = false
     //关闭cruncher版本检查
