--- a/laiqu/src/main/AndroidManifest.xml
+++ b/laiqu/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.qbgg.cenglaicengqu">
 
     <supports-screens
@@ -47,6 +48,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
+        tools:replace="android:icon, android:theme"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".main.acitvities.SpalshActivity"
@@ -199,7 +201,19 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".personcentre.activities.PersonalizedSignature"></activity>
+        <activity android:name=".personcentre.activities.PersonalizedSignatureActivity" />
+        <activity
+            android:name=".personcentre.activities.PersonalQRcodeBusinessActivity"
+            android:label="二维码名片"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".personcentre.activities.TastePreferenceActivity"
+            android:label="口味偏好"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
