--- a/laiqu/build.gradle
+++ b/laiqu/build.gradle
@@ -19,6 +19,10 @@ android {
     //关闭cruncher版本检查
     aaptOptions.useNewCruncher = false
     defaultConfig {
+        ndk {
+            //设置支持的SO库架构
+            abiFilters "armeabi-v7a", "x86","arm64-v8a","x86_64"
+        }
         applicationId "com.qbgg.cenglaicengqu"
         minSdkVersion 15
         targetSdkVersion 21
