--- a/laiqu/build.gradle
+++ b/laiqu/build.gradle
@@ -21,7 +21,7 @@ android {
     defaultConfig {
         ndk {
             //设置支持的SO库架构
-            abiFilters "armeabi-v7a", "x86","arm64-v8a","x86_64"
+            abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
         applicationId "com.qbgg.cenglaicengqu"
         minSdkVersion 15
@@ -75,4 +75,6 @@ dependencies {
     compile 'com.zhy:base-rvadapter:3.0.3'
     //流市布局
     compile 'com.zhy:flowlayout-lib:1.0.3'
+    //屏幕终极适配
+    // compile 'com.zhy:autolayout:1.3.6'
 }
